[package]
name = "cloudflare-wasm-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
async-openai-wasm = {path = "../../async-openai-wasm" }

[profile.release]
lto = true
strip = true
codegen-units = 1
