[package]
name = "openai-web-app-chat"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "~0.5", features = ["web"]}
futures = "0.3.30"
async-openai-wasm = { path = "../../async-openai-wasm" }
# Debug
tracing = "0.1.40"
dioxus-logger = "~0.5"